# atrium

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .gitmodules  .lighthouserc.json  .upptimerc.yml  .vercelignore  ARCHITECTURE.md  ATRIUM_12_MONTH_ROADMAP.md  AUDIT_BACKEND.md  AUDIT_CONTRACTS.md  AUDIT_FRONTEND.md  AUDIT_PROFESSIONALISM.md  AUDIT_ROADMAP.md  AUDIT_SERIOUSNESS.md  AUDIT_TESTS_SECURITY.md  AUDIT_USERFLOWS_COMPLETE.md  AUDIT_USER_FLOWS.md  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPETITIVE_POSITIONING.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_PLAN.md  DO_NOW_PLAN.md  FEATURE_COMPLETION.md  FOUNDER_ACTIONS.md  GETTING_STARTED.md  JUDGE_ONE_PAGER.md  LAUNCH_READY.md  LICENSE  Makefile  PITCH.md  PRODUCT_GAP_AUDIT.md  PUBLIC_RELEASE_ACTION_PLAN.md  QA_LAUNCH_READINESS.md  README.md  (+11 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
agents/: .env.example  Dockerfile  docker-compose.yml
agents/augur/: Cargo.toml
agents/augur/src/: main.rs  state.rs  strategy.rs  tick.ts
agents/augur/tests/: strategy.test.ts
agents/auspex/: Cargo.toml
agents/auspex/src/: main.rs  strategy.rs  tick.ts
agents/auspex/tests/: strategy.test.ts
agents/haruspex/: Cargo.toml
agents/haruspex/src/: main.rs  strategy.rs  tick.ts
agents/haruspex/tests/: strategy.test.ts
agents/template/: Cargo.toml
agents/template/src/: codex.rs  lib.rs  sigil.rs  state.rs
audits/: 2026-05-25-contract-quality-audit.md  2026-05-28-deep-audit.md  2026-05-28-full-audit.md  MONTH12_AUDIT_PLAN.md  month-1-half-baked-audit.md  month-2-5-half-baked-audits.md  month-6-to-10-status.md
contracts/: stylus.Dockerfile
contracts/coffer/: Cargo.toml  Cargo.toml.bak  README.md  Stylus.toml
contracts/coffer/src/: lib.rs  main.rs
contracts/plinth/: Cargo.toml  README.md  Stylus.toml  rust-toolchain.toml
contracts/plinth-math/: Cargo.toml  Stylus.toml
contracts/plinth-math/src/: lib.rs  main.rs
contracts/plinth-oracle/: Cargo.toml  Stylus.toml
contracts/plinth-oracle/src/: lib.rs  main.rs
contracts/plinth/src/: lib.rs  main.rs  math.rs  span.rs  tests.rs
contracts/plinth/tests/: proptest_invariants.rs
contracts/sigil/: Cargo.toml  Stylus.toml
contracts/sigil/src/: eip712.rs  lib.rs  lib.rs.fix-note  main.rs  tests.rs
contracts/vigil/: Cargo.toml  Stylus.toml
contracts/vigil/src/: lib.rs  main.rs
deployments/: arbitrum_sepolia.cutover-staged.json  arbitrum_sepolia.json  arbitrum_sepolia.staged.json  robinhood_chain.json
desing/: Atrium App.standalone.html  Atriumnew.html  Brand Kit.html  Mobile App.html  Mobile Landing.html  Mobile Preview.html
docs/: AUDIT_FINDINGS.md  FOUNDER-RUNBOOK.md  LAUNCH_READINESS.md  MASTER_PLAN.md  MONTHS_2_TO_12_BLUEPRINT.md  MONTH_01_AUDIT.md  ROADMAP.md  architecture.md  deployment.md  development.md  full-flow-design.md  lantern-attestor.md  plan-tracker.md  prd.md  resources.md  stylus-migration.md
history/: atrium-docs.yml  codex-api.yml  lantern-attestor.yml  scribe-subgraph.yml  subgraph-proxied.yml  summary.json  tablet-tax-service.yml  verify-production.yml
incidents/: 2026-05-24-deployer-key-leaked-to-local-temp-log.md
ops/: LAUNCH_RUNBOOK.md  code4rena-submission-pack.md  legal-consult-questions.md  rehearsal-script.md  social-announcements.md
rehearsals/: README.md  acceptance-criteria.md  dress-run-template.md  fault-injection-checklist.md  judge-runbook.md  loom-recording-outline.md
runbooks/: browserstack-setup.md  caddy-on-droplet.md  codex-deploy.md  deploy.md  deployer-key-rotation.md  discord-alerts.md  discord-server-setup.md  dns-provisioning.md  do-droplet-setup.md  email-routing.md  honeybadger-setup.md  incident-aqueduct-ccip.md  incident-archive.md  incident-chaos.md  incident-codex.md  incident-keeper.md  incident-lantern.md  incident-notifier.md  incident-oracle.md  incident-response.md  incident-scribe.md  key-rotation.md  launch-smoke-test.md  loadtest-eoa.md  new-relic-setup.md  on-call-rotation.md  pgp-key-generation.md  sentry-integrations.md  soft-launch.md  status-page-setup.md  student-pack-setup.md  vercel-deployment-protection.md  vercel-env-scoping.md  vigil-keeper-testnet-stake.md
script/: Deploy.s.sol  PhaseB.s.sol  PhaseB2.s.sol  PhaseB3-AdminWiring.s.sol  PhaseB3-Schedule.s.sol  PhaseC.s.sol  SetAuthorizedCallerOnAdapters.s.sol  SetCofferAdapterExecute.s.sol  SetCofferAdapterSchedule.s.sol
scripts/: _verify_adapters.sh  _verify_b2.sh  activate-plinth.mjs  audit-history.sh  build-press-kit.mjs  build-qa-doc.mjs  check-banned-words.mjs  check-entity-writers.mjs  check-entity-writers.test.mjs  check-event-indexing.mjs  check-event-indexing.test.mjs  check-scribe-health.mjs  cloud-init-droplet.yml  cutover-deploy-plinth.mjs  cutover-tplus48-execute.sh  docs-claims.test.mjs  download-fonts.mjs  execute-phase-b3.mjs  extract-abis.mjs  extract-abis.test.mjs  extract-design-tokens.browser.js  extract-design-tokens.mjs  extract-design-tokens.test.mjs  flip-cutover.mjs  generate-brand-rasters.mjs  (+30 more)
services/archive/: pyproject.toml
services/archive/notebooks/: mean-reversion-v1-1781421714.ipynb  q1-2026-backtest.ipynb
services/archive/src/: research_loop.py  sentry.py  span_backtest.py
services/archive/tests/: test_publish_attestation.py
services/praetor-cli/: Cargo.toml
services/praetor-cli/src/: main.rs  scribe.rs
services/praetor-cli/src/commands/: backtest.rs  deploy.rs  keepers.rs  lantern.rs  mod.rs  multisig.rs  pause.rs  seed.rs  setup-coffer-adapters.ts  setup-stylus-adapters.ts  timelock-execute.ts  timelock-schedule.ts  verify.rs
services/tablet/: Caddyfile  pyproject.toml  requirements.txt  vercel.json
services/tablet/api/: index.py
services/tablet/data/: fx-cache.sqlite
services/tablet/src/: fx_rates.py  main.py  models.py  scribe_client.py
services/tablet/src/exporters/: csv.py  de_fifo_csv.py  form8949_csv.py
services/tablet/src/jurisdictions/: de.py  uk.py  us.py
services/tablet/tests/: conftest.py  test_de_fifo.py  test_fx_rates.py  test_pagination.py  test_scribe_client.py  test_uk_cgt.py  test_us_form_8949.py
(+850 files in other folders)
