[package]
name = "atrium-augur"
description = "Augur — mean-reversion reference agent for Atrium"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "augur"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap.workspace = true
chrono = "0.4"
