[package]
name = "atrium-plinth-oracle"
description = "Dual-oracle price reader extracted from Plinth to fit EIP-170"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Atrium Contributors"]
repository = "https://github.com/atrium-fi/atrium"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "atrium-plinth-oracle"
path = "src/main.rs"

[dependencies]
stylus-sdk = "0.10"
alloy-primitives = "1"
alloy-sol-types = "1"
mini-alloc = "0.6"

[dev-dependencies]
# Audit (#24/#58): crate-type=["lib","cdylib"]; a bare `cargo test` otherwise
# fails to link the cdylib test harness natively (link.exe 1120 - no WasmVM
# host). The `stylus-test` feature swaps in the native TestVM mock host so
# `cargo test` links and runs. Matches plinth/coffer/vigil/sigil/plinth-math.
# plinth-oracle is workspace-excluded, so CI never runs it; local hygiene +
# unblocks future host tests for the dual-oracle reader here.
stylus-sdk = { version = "0.10", features = ["stylus-test"] }

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
contract-client-gen = []
