[package]
name = "atrium-plinth"
description = "Atrium SPAN-style portfolio margin engine on Arbitrum Stylus"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Atrium Contributors"]
repository = "https://github.com/atrium-fi/atrium"

[lib]
crate-type = ["lib", "cdylib"]

# cargo-stylus 0.5.x runs `cargo run --features=export-abi` during deploy to
# validate the contract's ABI export. Provide an explicit bin target so the
# runner doesn't error out with "a bin target must be available for cargo run"
# on a lib-only crate.
[[bin]]
name = "atrium-plinth"
path = "src/main.rs"

[dependencies]
# Stylus 0.10 migration: align alloy versions with what stylus-sdk 0.10
# internally re-exports (1.x). Mixing 0.8 + 1.x causes derive macros to
# silently fail because the trait paths resolve to two different copies.
stylus-sdk = "0.10"
alloy-primitives = "1"
alloy-sol-types = "1"
serde = { version = "1.0", features = ["derive"], optional = true }
mini-alloc = "0.6"

[dev-dependencies]
proptest = "1.5"
# Audit fix (#24/#58): stylus-sdk 0.10.7 exposes a `stylus-test` feature that
# swaps the WasmVM host for a native TestVM mock, so host-level unit tests
# (auth / error / reentrancy / version-bump) link and run natively via
# `cargo test` on this box. The prior note claimed 0.6 lacked it and deferred
# all host tests - that was wrong; TestVM is verified working here.
stylus-sdk = { version = "0.10", features = ["stylus-test"] }

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
serde = ["dep:serde", "alloy-primitives/serde"]
contract-client-gen = []
# Exposes the host-only `math` + `span` reference modules to external test
# crates (tests/proptest_invariants.rs). The integration test's own header
# documents `cargo test --features test-host`. A bare `cargo test` skips that
# test target (see `required-features` below) and runs the in-crate host unit
# tests in src/tests.rs, which link via the stylus-test mock VM.
test-host = []

# The proptest integration test imports atrium_plinth::math / ::span, which
# only exist under `test-host` / `export-abi`. Gate the test target on the
# feature so a bare `cargo test` does not fail to compile it; run it with
# `cargo test --features test-host`.
[[test]]
name = "proptest_invariants"
path = "tests/proptest_invariants.rs"
required-features = ["test-host"]

# Declare the `kani` cfg so check-cfg under -D warnings does not flag the
# #[cfg(kani)] gates around #[kani::proof] modules (math.rs + span.rs).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[package.metadata.kani.flags]
unwind = "5"
default-unwind = "3"
