[project]
name = "atrium-archive"
version = "0.1.0"
description = "Archive — Atrium risk lab + backtest research"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Atrium Contributors" }]
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "web3>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
