[package]
name = "atrium-praetor-cli"
description = "Praetor — Atrium deploy + ops CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "praetor"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
