[project]
name = "atrium-tablet"
version = "0.1.0"
description = "Tablet, UK CGT / US 8949 / DE FIFO tax exports for Atrium"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Atrium Contributors" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.9",
    "python-dateutil>=2.9",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
